[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg_utils"
version = "0.1.7"
description = "A simple database utility library using psycopg3"
authors = [
    { name="Lucas Soares", email="lucassoaresolv@outlook.com" }
]
requires-python = ">=3.7"
dependencies = [
    "psycopg[binary]>=3.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/lucassoaresol/pg-utils-python"

[project.scripts]
pg-utils = "pg_utils.cli:main"
